--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,38 @@
     transform: rotate(360deg);
   }
 }
+
+/* WORDLE STYLES */
+
+/* Key Container */
+/* keyboard tiles are same width as title container for consistency but they wrap to create a keyboard shape */
+.key-container {
+  width: 510px;
+  display: flex;
+  flex-wrap: wrap;
+ }
+
+ .key-container button {
+  width: 43px;
+  height: 58px;
+  border-radius: 4px;
+  border: none;
+  background-color: #818384;
+  margin: 4px;
+  cursor: pointer;
+ }
+
+ .key-container button:hover {
+  background-color: #818395;
+  color: black;
+ }
+
+ /* makes the enter and back button wider */
+ .key-container button:nth-child(20), 
+ .key-container button:nth-child(28) {
+ width: 68px;
+ }
+
+ .key-container button:nth-child(11) {
+ margin-left: 30px;
+}
